# ToddBenchmark

./: .gitignore  CITATION.cff  Readme.md  pyproject.toml  requirements.txt
examples/classifications/: .gitignore  Readme.md  evaluate_classification.py  finetune.sh  finetune_classification.py
examples/entropbenchmark/: evaluate_benchmark.py  generation_args.py
examples/question_answering/: evaluate_qa.py
examples/rainproof/: evaluate_rainproof.py  generation_args.py
examples/summarization/: cache_models.py  evaluate_summarization.py
examples/translation/: display_model_and_translation_configs.py  evaluate_translation.py
scripts/: aggregate_per_step_scores.py  cache_classification_datasets.py  cache_datasets.py  cache_generation_datasets.py  evaluate_classification.py  evaluate_generation.py  evaluate_generation_wsteps.py  evaluate_ood.py  finetune_classification.py  finetune_generation.py
scripts/configs/: datasets_configs.py  evaluate_generation.yml  evaluate_generation_bart.yml  evaluate_generation_flant5.yml  evaluate_generation_instructor.yml  evaluate_generation_llama.yml  evaluate_generation_m2m.yml  evaluate_generation_opt.yml  evaluate_generation_sum_flant5.yml  evaluate_generation_t5.yml  model_configs.yml  wrapper.py
toddbenchmark/: classification_data.py  classification_datasets.py  classification_datasets_configs.py  datasets_configs.py  generation_data.py  generation_datasets.py  generation_datasets_configs.py  hallucinations_preprocessing.py  metrics.py  utils.py  utils_classification.py  utils_generation.py
(+1 files in other folders)
